[gd_scene load_steps=18 format=3 uid="uid://cs3h434myxe4r"]

[ext_resource type="Script" uid="uid://d1p6o2ixegcp2" path="res://scripts/player.gd" id="1_esbpa"]
[ext_resource type="Texture2D" uid="uid://b3y87vf4oiey5" path="res://assets/personaje-test/correr.png" id="2_kkt6c"]
[ext_resource type="Texture2D" uid="uid://cm0c47duyxhoi" path="res://assets/personaje-test/idle.png" id="3_j7xnp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j7xnp"]
atlas = ExtResource("2_kkt6c")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4kro"]
atlas = ExtResource("2_kkt6c")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nxto"]
atlas = ExtResource("2_kkt6c")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3yu4"]
atlas = ExtResource("2_kkt6c")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4hsq"]
atlas = ExtResource("2_kkt6c")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sacnx"]
atlas = ExtResource("2_kkt6c")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1ak7"]
atlas = ExtResource("2_kkt6c")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd0y7"]
atlas = ExtResource("2_kkt6c")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7fad"]
atlas = ExtResource("3_j7xnp")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2wyw"]
atlas = ExtResource("3_j7xnp")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbrud"]
atlas = ExtResource("3_j7xnp")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b7ct"]
atlas = ExtResource("3_j7xnp")
region = Rect2(240, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_w7fad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7xnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4kro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nxto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3yu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4hsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sacnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1ak7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd0y7")
}],
"loop": true,
"name": &"caminar",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7fad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2wyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbrud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b7ct")
}],
"loop": true,
"name": &"idle",
"speed": 11.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kkt6c"]
radius = 32.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_esbpa")

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
bank_paths = ["res://assets/audio/FmodBanks/Desktop/SFX.bank"]

[node name="AnimatedSpritePJ" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_w7fad")
animation = &"caminar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kkt6c")

[node name="MASCARA" type="Node2D" parent="."]

[node name="TimerCoyoteTime" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="FmodEventEmitter2D" type="FmodEventEmitter2D" parent="."]
event_name = "event:/Personaje/Movimiento/pasos"
event_guid = "{60f647bc-9dc2-4ff2-9a28-3e3d5b3fb282}"
fmod_parameters/Superficie/id = -5155162075446807488
fmod_parameters/Superficie = "pasto"
fmod_parameters/Superficie/labels = PackedStringArray("pasto", "madera", "piedra")
fmod_parameters/Superficie/variant_type = 4

[node name="FmodEventEmitter2D2" type="FmodEventEmitter2D" parent="."]
event_name = "event:/Personaje/Movimiento/salto"
event_guid = "{f53bcf20-29b6-434f-bdfb-043bdc67c2fb}"
